// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should have all props including customProps set correctly 1`] = `
<span
  className="text inherit-color italic word-wrap visually-hidden font-size-20 font-weight-200"
  id="id"
>
  All props and custom attrs
</span>
`;

exports[`Text should not set inherit-color class is a colorClass is provided 1`] = `
<span
  className="text TestClass"
>
  Test
</span>
`;

exports[`Text should render a text component 1`] = `
<span
  className="text inherit-color"
>
  Test
</span>
`;

exports[`Text should render a text component with colorClass prop set 1`] = `
<span
  className="text testClass"
>
  Test
</span>
`;

exports[`Text should render a text component with fontSize prop set 1`] = `
<span
  className="text inherit-color font-size-24"
>
  Test
</span>
`;

exports[`Text should render a text component with isItalic prop set 1`] = `
<span
  className="text inherit-color italic"
>
  Test
</span>
`;

exports[`Text should render a text component with isVisuallyHidden prop set 1`] = `
<span
  className="text inherit-color visually-hidden"
>
  Test
</span>
`;

exports[`Text should render a text component with isWordWrapped prop set 1`] = `
<span
  className="text inherit-color word-wrap"
>
  Test
</span>
`;

exports[`Text should render a text component with weight prop set 1`] = `
<span
  className="text inherit-color font-weight-200"
>
  Test
</span>
`;

exports[`Text should set inherit-color class if no colorClass is provided 1`] = `
<span
  className="text inherit-color"
>
  Test
</span>
`;

exports[`Text should support rendering a string as children 1`] = `
<span
  className="text inherit-color"
>
  String
</span>
`;

exports[`Text should support rendering an array of elements as a children 1`] = `
<span
  className="text inherit-color"
>
  <span>
    Element 1
  </span>
  <span>
    Element 2
  </span>
  <span>
    Element 3
  </span>
</span>
`;

exports[`Text should support rendering an element as children 1`] = `
<span
  className="text inherit-color"
>
  <span>
    Element
  </span>
</span>
`;
